Made some changes on home page

--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
-    <h1>This is home page</h1>
+    <header>
+        <nav class="navigation-container">
+            <p>URL Shortener</p>
+        </nav>
+    </header>
+
+    <script src="scripts/home.js"></script>
 </body>
 </html>
